--- a/src/app/components/registra-sede/registra-sede.component.html
+++ b/src/app/components/registra-sede/registra-sede.component.html
@@ -22,7 +22,7 @@
 
                 <div class="col-lg-3">
                         <label for="fechaCreacion">Fecha de Creación</label>
-                        <input type="text" class="form-control" name="fechaCreacion" id="fechaCreacion" [(ngModel)] = "sede.fechaCreacion" />
+                        <input type="date" class="form-control" name="fechaCreacion" id="fechaCreacion" [(ngModel)] = "sede.fechaCreacion" />
                 </div>
          </div>
   
