--- a/src/app/components/registra-producto/registra-producto.component.html
+++ b/src/app/components/registra-producto/registra-producto.component.html
@@ -11,41 +11,40 @@
         <div class="row" style="margin-top: 3%">
                 <div class="col-lg-3">
                     <label for="nombre">Nombre</label>
-                    <input type="text" class="form-control" name="nombre" id="nombre" [(ngModel)] ="producto.nombre"   />
+                    <input type="text" class="form-control" name="nombre" [(ngModel)] ="producto.nombre"   />
                 </div>
             
                 <div class="col-lg-3">
                     <label for="numHombres">serie</label>
-                    <input type="text" class="form-control" name="numHombres" id="numHombres"  [(ngModel)] = "producto.serie" />
+                    <input type="text" class="form-control" name="serie"   [(ngModel)] = "producto.serie" />
                 </div>
 
                 <div class="col-lg-3">
                     <label for="numMujeres">Durabilidad</label>
-                    <input type="text" class="form-control" name="numMujeres" id="numMujeres"  [(ngModel)] = "producto.durabilidad"  />
+                    <input type="text" class="form-control" name="durabilidad"   [(ngModel)] = "producto.durabilidad"  />
                 </div>
          </div>
   
         <div class="row" style="margin-top: 3%">
         <div class="col-lg-3">
             <label for="edadMinima">fecha vigencia</label>
-            <input type="date"  class="form-control" id="fechaVigencia"  name="fechaVigencia" 
-            [(ngModel)]= "producto.fechaVigencia" />
+            <input type="text"  class="form-control" name="fechaVigencia" [(ngModel)]= "producto.fechaVigencia" />
         </div>
     
         <div class="col-lg-2">
                 <label for="edadMaxima">Precio</label>
-                <input type="text"  class="form-control" id="precio"  name="precio" maxlength="3"   [(ngModel)]= "producto.precio"/>
+                <input type="text"  class="form-control"  name="precio" maxlength="3"   [(ngModel)]= "producto.precio"/>
             </div>
 
             <div class="col-lg-2">
                 <label for="sede">Stock</label>
-                <input type="number"  class="form-control" id="stock"  name="stock" maxlength="2"  [(ngModel)]= "producto.stock" />
+                <input type="number"  class="form-control" name="stock" maxlength="2"  [(ngModel)]= "producto.stock" />
             </div>
  
             
             <div class="col-lg-3">
-                <label for="deporte">Marca</label>
-            <select  id="deporte" name="estado" class="form-control"   [(ngModel)] = "producto.marca" >
+                <label for="marca">Marca</label>
+            <select   name="marca" class="form-control"   [(ngModel)] = "producto.marca" >
                
                     <option value="-1"> [Seleccione] </option>  
                      <option *ngFor="let aux of marca " value="{{aux.idMarca}}">
