--- a/src/app/components/crud-producto/crud-producto.component.html
+++ b/src/app/components/crud-producto/crud-producto.component.html
@@ -99,20 +99,19 @@
                                             <div *ngIf="validaSerie.errors!">
                                                 <table class="form-table">
                                                     <li>La serie es obligatorio</li>
-                                                    <li>La serie es 10 digitos</li>
+                                                    <li>serie es >= 10 digitos</li>
                                                 </table>
-                                            </div>   
-                                             
+                                            </div>                                               
                                          </div> 
                                     </div>
                                     <div class="col-lg-4">
                                         <label for="id_reg_durabilidad">durabilidad</label>
                                         <input  [(ngModel)]="producto.durabilidad" type="text"    class="form-control" name="durabilidad" id="id_reg_durabilidad"  #validaDurabilidad="ngModel" required pattern="[a-zA-Z ]{3,30}"/>
                                         <div *ngIf="validaDurabilidad.invalid && (validaDurabilidad.dirty || validaDurabilidad.touched)" class="alert alert-danger">
-                                            <table  *ngIf="validaDurabilidad.errors!">                                                
+                                            <span  *ngIf="validaDurabilidad.errors!">                                                
                                                     <li>La durabilidad es obligatorio</li>
-                                                <li>el texto debe ser   mayor a 8 digitos</li>
-                                            </table>   
+                                                <li>texto debe ser   mayor a 8 digitos</li>
+                                            </span>   
                                            
                                          </div>
                                     </div>
@@ -133,9 +132,9 @@
                                         <label for="id_reg_precio">precio</label>
                                         <input  [(ngModel)]="producto.precio" type="text"    class="form-control" name="precio" id="id_reg_precio"  #validaPrecio="ngModel" minlength="1" maxlength="10" required pattern="^[0-9]+([.][0-9]+)?$" />
                                         <div  *ngIf="validaPrecio.invalid && (validaPrecio.dirty || validaPrecio.touched)" class="alert alert-danger" >
-                                            <table  *ngIf="validaPrecio.errors!">                                                
-                                                <p  >el precio es obligatorio</p>                                                
-                                            </table>                                              
+                                            <span  *ngIf="validaPrecio.errors!">                                                
+                                                <p>el precio es obligatorio</p>                                                
+                                            </span>                                              
                                          </div>
                                     </div>
                                     <div class="col-lg-3">
@@ -152,7 +151,7 @@
                                 <div class="row" style="margin-top: 5%">
                                     <div class="col-lg-4">
                                         <label for="id_reg_marca">Marca</label>
-                                        <select [(ngModel)]="producto.marca!.idMarca" class="form-control"  name="marca"  #validaMarca="ngModel" required pattern="" >
+                                        <select [(ngModel)]="producto.marca!.idMarca" class="form-control"  name="marca"  #validaMarca="ngModel" required pattern >
                                             <option value="-1"> [Seleccione] </option>
                                             <option *ngFor="let aux of m" value="{{ aux.idMarca }}"> 
                                                         {{ aux.nombre}}
@@ -214,71 +213,113 @@
                         <div class="submit-form">
 
                             <div  class="row">
-                                <div class="col-lg-4">
+                                <div class="col-lg-3">
                                     <label for="id_act_nombre">Nombre</label>
-                                    <input [(ngModel)]="producto.nombre"  type="text"  class="form-control" name="validaNombre" id="id_act_nombre" #validaNombre="ngModel" required />
-                                     
+                                    <input [(ngModel)]="producto.nombre" type="text"    class="form-control" name="nombre" id="id_act_nombre" #validaNombre1="ngModel" required pattern="[a-zA-Z ]{5,30}"/>
+                                    <div *ngIf="validaNombre1.invalid && (validaNombre1.dirty || validaNombre1.touched)" class="alert alert-danger">
+                                        <span *ngIf="validaNombre1.errors!">                                                
+                                                <li>El nombre es obligatorio</li>
+                                                <li>minimo 5 caracteres </li>                                            
+                                        </span>                                           
+                                     </div>  
                                 </div>
     
-                                <div class="col-lg-2">
+                                <div class="col-lg-3">
                                     <label for="id_act_estado">Estado</label>
-                                    <select [(ngModel)]="producto.estado"  id="id_act_estado" name="estado" class="form-control" required>
+                                    <select [(ngModel)]="producto.estado"  id="id_act_estado" name="estado" class="form-control" #ValidaEstado="ngModel" required>
                                         <option value=""> [Seleccione] </option>
                                         <option value="1"> Activo </option>
                                         <option value="0"> Inactivo </option>
-                                    </select>
+                                    </select><div *ngIf="ValidaEstado.invalid && (ValidaEstado.dirty || ValidaEstado.touched)" class="alert alert-danger">
+                                        <span *ngIf="ValidaEstado.errors!">                                                
+                                                <li>El estado es obligatorio</li>                                    
+                                        </span>                                           
+                                     </div> 
                                    
                                 </div>
-                                <div class="col-lg-2">
+                                <div class="col-lg-3">
                                     <label for="id_act_serie">Serie</label>
-                                    <input [(ngModel)]="producto.serie"  type="text"   class="form-control" name="serie" id="id_act_serie"  maxlength="10" #validaSerie="ngModel" required/>    
-                                </div>
+                                   <input  [(ngModel)]="producto.serie" type="text"    class="form-control" name="serie" id="id_act_serie"  #validaSerie1="ngModel" required maxlength="10" pattern="[0-9]{10}"/>
+                                    <div *ngIf="validaSerie1.invalid && (validaSerie1.dirty || validaSerie1.touched)" class="alert alert-danger">
+                                        <div *ngIf="validaSerie1.errors!">
+                                            <span >
+                                                <li>La serie es obligatorio</li>
+                                                <li>serie es >= 10 digitos</li>
+                                            </span>
+                                        </div>                                               
+                                     </div></div>
                                 
-                                <div class="col-lg-2">
+                                <div class="col-lg-2" style="margin-bottom: 3%">
                                     <label for="id_act_stock">Stock</label>
-                                    <input [(ngModel)]="producto.stock"  type="number"   class="form-control" name="stock" id="id_act_stock"  maxlength="8" #validaStock="ngModel" required pattern="[0-9]{4}"/>
-                                    
+                                    <input  [(ngModel)]="producto.stock" type="number"    class="form-control" name="stock" id="id_reg_stock"  #validaStock1="ngModel" required  minlength="1" pattern="[1-9]{1,10}"   />
+                                    <div  *ngIf="validaStock1.invalid && (validaStock1.dirty || validaStock1.touched)" class="alert alert-danger" >
+                                        <span   *ngIf="validaStock1.errors!">                                                
+                                                <p  > el stock es obligatorio</p>                                                
+                                        </span>                                              
+                                     </div> 
+                                </div>
+                                <div class="col-lg-3" style="margin-bottom: 2%">
+                                    <label for="id_act_durabilidad">durabilidad</label>
+                                    <input [(ngModel)]="producto.durabilidad"  type="text"  class="form-control" name="durabilidad" id="id_act_durabilidad" #validaDurabilidad1="ngModel" required pattern="[a-zA-Z ]{3,30}"/>
+                                    <div *ngIf="validaDurabilidad1.invalid && (validaDurabilidad1.dirty || validaDurabilidad1.touched)" class="alert alert-danger">
+                                        <span  *ngIf="validaDurabilidad1.errors!">                                                
+                                            <li>durabilidad es obligatorio</li>
+                                            <li>caracteres mayor de 8 digitos</li>
+                                        </span>   
+                                       
+                                     </div>
                                 </div>
                             </div>  
-                            <div  class="row">
-                                <div class="col-lg-4">
-                                    <label for="id_act_durabilidad">durabilidad</label>
-                                    <input [(ngModel)]="producto.durabilidad"  type="text"  class="form-control" name="durabilidad" id="id_act_durabilidad" #validaNombre="ngModel" required pattern="[a-zA-Z ]{3,30}"/>
-                                      
-                                </div>
-    
-                                <div class="col-lg-2">
-                                    <label for="id_act_fechaVigencia">fechaVigencia</label>
-                                    <input [(ngModel)]="producto.fechaVigencia"  type="date"   class="form-control" name="fechaVigencia" id="id_act_fechaVigencia"   required/>
-                                    
-                                </div>
+                           
+                            <div class="row" style="margin-bottom: 5%">
                                 <div class="col-lg-2">
                                     <label for="id_act_precio">Precio</label>
-                                    <input [(ngModel)]="producto.precio"  type="text"   class="form-control" name="precio" id="id_act_precio"  maxlength="8" required pattern="[0-9]{8}"/>
-                                    
+                                                                      
+                                    <input  [(ngModel)]="producto.precio" type="text"    class="form-control" name="precio" id="id_reg_precio"  #validaPrecio1="ngModel" minlength="1" maxlength="10" required pattern="^[0-9]+([.][0-9]+)?$" />
+                                    <div  *ngIf="validaPrecio1.invalid && (validaPrecio1.dirty || validaPrecio1.touched)" class="alert alert-danger" >
+                                        <span  *ngIf="validaPrecio1.errors!">                                                
+                                            <p>el precio es obligatorio</p>                                                
+                                        </span>                                              
+                                     </div>
                                 </div>
-                            </div>
-                            <div class="row" style="margin-top: 5%">
+                                <div class="col-lg-4">
+                                    <label for="id_act_fechaVigencia">fechaVigencia</label>
+                                    <input [(ngModel)]="producto.fechaVigencia" type="date"    class="form-control" name="fechaVigencia" id="id_reg_fechaVigencia" #validaFecha1="ngModel" required pattern="^\d{4}([\-/.])(0?[1-9]|1[1-2])\1(3[01]|[12][0-9]|0?[1-9])$"/>
+                                    <div *ngIf="validaFecha1.invalid && (validaFecha1.dirty || validaFecha1.touched)" class="alert alert-danger">
+                                        <span  *ngIf="validaFecha1.errors!">                                                
+                                            <p  >La fecha es obligatorio</p>                                               
+                                        </span>                                        
+                                     </div>
+                                </div>
                                 <div class="col-lg-2">
                                     <label for="id_act_marca">Marca</label>
-                                    <select [(ngModel)]="producto.marca!.idMarca"  id="id_act_marca" name="marca" class="form-control" required>
-                                        <option value="-1"> [Seleccione] </option>
+                                    <select [(ngModel)]="producto.marca!.idMarca" class="form-control"  name="marca"  #validaMarca1="ngModel" required pattern >
+                                        <option value=""> [Seleccione] </option>
                                         <option *ngFor="let aux of m" value="{{ aux.idMarca}}">
                                             {{ aux.nombre }}
                                         </option> 
                                     </select>
+                                    <div  *ngIf="validaMarca1.invalid && (validaMarca1.dirty || validaMarca1.touched)" class="alert alert-danger" required>
+                                        <span *ngIf="validaMarca1.errors!">                                                
+                                                <p>Marca  es obligatorio</p>                                                
+                                        </span>                                              
+                                     </div>
                                     
                                 </div>
     
                                 <div class="col-lg-2">
                                     <label for="id_act_pais">Pais</label>
-                                    <select [(ngModel)]="producto.pais!.idPais"  id="id_act_pais" name="pais" class="form-control" #validaProvincia="ngModel" required>
-                                        <option value="-1"> [Seleccione] </option>
+                                    <select  [(ngModel)]="producto.pais!.idPais" class="form-control"  name="pais"  #validaPais1="ngModel" required >
+                                        <option value=""> [Seleccione] </option>
                                         <option *ngFor="let aux of p" value="{{ aux.idPais}}">
                                             {{ aux.nombre }}
                                         </option>   
                                     </select>
-                                   
+                                    <div  *ngIf="validaPais1.invalid && (validaPais1.dirty || validaPais1.touched)" class="alert alert-danger" required>
+                                        <span *ngIf="validaPais1.errors!">                                                
+                                                <p>pais es obligatorio</p>                                                
+                                        </span>                                              
+                                     </div>
                                 </div>
     
                             </div> 
