--- a/src/app/components/registra-producto/registra-producto.component.html
+++ b/src/app/components/registra-producto/registra-producto.component.html
@@ -1,5 +1,5 @@
 <div>
-    <form class="content" (ngSubmit)="insertaProducto()" >
+    <form class="content" (ngSubmit)="registra()" >
     <div class="submit-form" >  
   
          <div class="row">
@@ -11,63 +11,105 @@
         <div class="row" style="margin-top: 3%">
                 <div class="col-lg-3">
                     <label for="nombre">Nombre</label>
-                    <input type="text" class="form-control" name="nombre" [(ngModel)] ="producto.nombre"   />
-                </div>
+                    <input [(ngModel)]="producto.nombre" type="text"    class="form-control" name="nombre" id="id_reg_nombre" #validaNombre="ngModel" required pattern="[a-zA-Z ]{5,30}"/>
+                                        <div *ngIf="validaNombre.invalid && (validaNombre.dirty || validaNombre.touched)" class="alert alert-danger">
+                                            <table *ngIf="validaNombre.errors!">                                                
+                                                    <li>El nombre es obligatorio</li>
+                                                    <li>minimo 5 caracteres </li>                                            
+                                            </table>                                           
+                                         </div> 
+                                          </div>
             
                 <div class="col-lg-3">
                     <label for="numHombres">serie</label>
-                    <input type="text" class="form-control" name="serie"   [(ngModel)] = "producto.serie" />
-                </div>
+                    <input  [(ngModel)]="producto.serie" type="text"    class="form-control" name="serie" id="id_reg_serie"  #validaSerie="ngModel" required maxlength="10" pattern="[0-9]{10}"/>
+                    <div *ngIf="validaSerie.invalid && (validaSerie.dirty || validaSerie.touched)" class="alert alert-danger">
+                        <div *ngIf="validaSerie.errors!">
+                            <table class="form-table">
+                                <li>La serie es obligatorio</li>
+                                <li>serie es >= 10 digitos</li>
+                            </table>
+                        </div>                                               
+                     </div> </div>
 
-                <div class="col-lg-3">
+                <div class="col-lg-4">
                     <label for="numMujeres">Durabilidad</label>
-                    <input type="text" class="form-control" name="durabilidad"   [(ngModel)] = "producto.durabilidad"  />
+                   <input  [(ngModel)]="producto.durabilidad" type="text"    class="form-control" name="durabilidad" id="id_reg_durabilidad"  #validaDurabilidad="ngModel" required pattern="[a-zA-Z ]{3,30}"/>
+                    <div *ngIf="validaDurabilidad.invalid && (validaDurabilidad.dirty || validaDurabilidad.touched)" class="alert alert-danger">
+                        <span  *ngIf="validaDurabilidad.errors!">                                                
+                                <li>La durabilidad es obligatorio</li>
+                            <li>texto debe ser   mayor a 8 digitos</li>
+                        </span>                                             
+                     </div>
                 </div>
          </div>
   
         <div class="row" style="margin-top: 3%">
         <div class="col-lg-3">
             <label for="edadMinima">fecha vigencia</label>
-            <input type="text"  class="form-control" name="fechaVigencia" [(ngModel)]= "producto.fechaVigencia" />
-        </div>
+            <input [(ngModel)]="producto.fechaVigencia" type="date"    class="form-control" name="fechaVigencia" id="id_reg_fechaVigencia" #validaFecha="ngModel" required pattern="^\d{4}([\-/.])(0?[1-9]|1[1-2])\1(3[01]|[12][0-9]|0?[1-9])$"/>
+                                        <div *ngIf="validaFecha.invalid && (validaFecha.dirty || validaFecha.touched)" class="alert alert-danger">
+                                            <span  *ngIf="validaFecha.errors!">                                                
+                                                <p  >La fecha es obligatorio</p>                                               
+                                            </span>                                             
+                                         </div>
+                                         </div>
     
         <div class="col-lg-2">
-                <label for="edadMaxima">Precio</label>
-                <input type="text"  class="form-control"  name="precio" maxlength="3"   [(ngModel)]= "producto.precio"/>
-            </div>
+                <label for="precio">Precio</label>
+                <input  [(ngModel)]="producto.precio" type="text"    class="form-control" name="precio" id="id_reg_precio"  #validaPrecio="ngModel" minlength="1" maxlength="10" required pattern="^[0-9]+([.][0-9]+)?$" />
+                <div  *ngIf="validaPrecio.invalid && (validaPrecio.dirty || validaPrecio.touched)" class="alert alert-danger" >
+                    <span  *ngIf="validaPrecio.errors!">                                                
+                        <p>el precio es obligatorio</p>                                                
+                    </span>                                              
+                 </div>   </div>
 
             <div class="col-lg-2">
                 <label for="sede">Stock</label>
-                <input type="number"  class="form-control" name="stock" maxlength="2"  [(ngModel)]= "producto.stock" />
-            </div>
+                <input  [(ngModel)]="producto.stock" type="number"    class="form-control" name="stock" id="id_reg_stock"  #validaStock="ngModel" required  min="1" pattern="[0-9]{1,10}"   />
+                <div  *ngIf="validaStock.invalid && (validaStock.dirty || validaStock.touched)" class="alert alert-danger" >
+                    <span   *ngIf="validaStock.errors!">                                                
+                            <p  > el stock es obligatorio</p>                                                
+                    </span>                                              
+                 </div>  </div>
  
             
             <div class="col-lg-3">
                 <label for="marca">Marca</label>
-            <select   name="marca" class="form-control"   [(ngModel)] = "producto.marca" >
-               
-                    <option value="-1"> [Seleccione] </option>  
-                     <option *ngFor="let aux of marca " value="{{aux.idMarca}}">
-                        {{aux.nombre}}
-                    </option>   
-                </select> 
+                <select [(ngModel)]="producto.marca!.idMarca" class="form-control"  name="marca"  #validaMarca="ngModel"  required >
+                    <option value="-1"> [Seleccione] </option>
+                    <option *ngFor="let aux of m" value="{{ aux.idMarca }}"> 
+                                {{ aux.nombre}}
+                    </option>
+                </select>
+                <div  *ngIf="validaMarca.invalid && (validaMarca.dirty || validaMarca.touched)" class="alert alert-danger" required>
+                    <span   *ngIf="validaMarca.errors!">                                                
+                            <p  > la marca es obligatorio</p>                                                
+                    </span>                                              
+                 </div> 
             </div>
      
     <div class="col-lg-3">
                 <label for="pais">Pais</label>
-                <select  name="pais" class="form-control"  [(ngModel)] ="producto.pais" >  
-                    <option value="-1"> [Seleccione] </option>   
-                    <option *ngFor="let aux of pais" value= "{{aux.idPais}}" >
-                        {{aux.nombre}}
-                    </option>       
+                <select  [(ngModel)]="producto.pais!.idPais" class="form-control"  name="pais"  #validaPais1="ngModel"  required >
+                    <option value="-1"> [Seleccione] </option>
+                    <option *ngFor="let aux of p" value="{{ aux.idPais}}">
+                        {{ aux.nombre }}
+                    </option>   
                 </select>
+                <div  *ngIf="validaPais1.invalid && (validaPais1.dirty || validaPais1.touched)" class="alert alert-danger"  >
+                    <span *ngIf="validaPais1.errors!">                                                
+                            <p>pais es obligatorio</p>                                                
+                    </span>                                              
+                 </div>
             </div>
 
         </div>
   
         <div class="row" style="margin-top: 3%"> 
                 <div class="col-lg-12">
-                    <button class="btn btn-primary"  >Enviar</button>
+                    <button id="btn_reg_registrar" class="btn btn-primary"  >Enviar</button>
+                    <button type="reset" class="btn btn-secondary"   id="btn_act_limpiar" style="width: 100px;">Limpiar</button>
                 </div>
         </div>
   
