--- a/src/app/components/registra-producto/registra-producto.component.html
+++ b/src/app/components/registra-producto/registra-producto.component.html
@@ -76,14 +76,14 @@
             
             <div class="col-lg-3">
                 <label for="marca">Marca</label>
-                <select [(ngModel)]="producto.marca!.idMarca" class="form-control"  name="marca"  #validaMarca="ngModel"  required >
+                <select [(ngModel)]="producto.marca!.idMarca" class="form-control"  name="marca"  #validaMarca1="ngModel"  required min="1" pattern="[1-9000]{1,90000}">
                     <option value="-1"> [Seleccione] </option>
                     <option *ngFor="let aux of m" value="{{ aux.idMarca }}"> 
                                 {{ aux.nombre}}
                     </option>
                 </select>
-                <div  *ngIf="validaMarca.invalid && (validaMarca.dirty || validaMarca.touched)" class="alert alert-danger" required>
-                    <span   *ngIf="validaMarca.errors!">                                                
+                <div  *ngIf="validaMarca1.invalid && (validaMarca1.dirty || validaMarca1.touched)" class="alert alert-danger" required  >
+                    <span   *ngIf="validaMarca1.errors!">                                                
                             <p  > la marca es obligatorio</p>                                                
                     </span>                                              
                  </div> 
@@ -91,7 +91,7 @@
      
     <div class="col-lg-3">
                 <label for="pais">Pais</label>
-                <select  [(ngModel)]="producto.pais!.idPais" class="form-control"  name="pais"  #validaPais1="ngModel"  required >
+                <select  [(ngModel)]="producto.pais!.idPais" class="form-control"  name="pais"  #validaPais1="ngModel"  required  min="1" pattern="[1-9000]{1,90000}" >
                     <option value="-1"> [Seleccione] </option>
                     <option *ngFor="let aux of p" value="{{ aux.idPais}}">
                         {{ aux.nombre }}
